--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ header nav .toggle-menu {
 /* start lainding */
 .landig {
   height: 100vh;
-  background-image: url(/images/background.jpg);
+  background-image: url(images/background.jpg);
   background-size: cover;
   position: relative;
   display: flex;
